--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -19,6 +19,6 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
           scope: '@kalkuz'
       - run: yarn install --frozen-lockfile
-      - run: yarn publish --access publish
+      - run: yarn publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
