--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
   "name": "@kalkuz/express-respond-status",
-  "version": "0.1.4",
+  "version": "1.0.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/kalkuz/fetch-http"
   },
   "scripts": {
-    "build": "babel index.js --out-file build.js"
+    "build": "tsc"
   },
   "description": "A quick-use and minimal response utility for all status codes",
-  "main": "build.js",
+  "main": "build/index.js",
   "author": "Oğuzhan Kalkuz",
   "license": "MIT",
   "devDependencies": {
-    "@babel/cli": "^7.21.5",
-    "@babel/core": "^7.21.8",
-    "@babel/plugin-transform-modules-commonjs": "^7.21.5",
-    "eslint": "^7.32.0 || ^8.2.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.25.2"
+    "@types/express": "^4.17.21",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "eslint": "^8.55.0",
+    "eslint-config-standard-with-typescript": "^40.0.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-n": "^16.3.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
     "express": "^4.18.2"
